--- a/Changes
+++ b/Changes
@@ -1,6 +1,16 @@
 Revision history for Perl extension XML::SAX::ExpatXS
 =====================================================
 
+0.98 April 9, 2004
+    - added support for more encodings. In addition to
+      built-in Expat encodings (UTF-8, UTF-16, ISO-8859-1, 
+      US-ASCII) we now support ISO-8859-2,3,4,5,7,8,9,
+      WIN-1250,1252, BIG5, EUC-KR, EUC-JP and Shift JIS.
+      (adapted from XML::Parser)
+    - cleaning the code to satisfy gcc2 and ANSI C
+      [suggested by Sergey Skvortsov]
+    - minor bug fixes (locator, test suite)
+
 0.97 March 29, 2004
     - external parsed entities parsed
     - external_entity_decl (Name, PublicId, SystemId) called 
