Import of PCIMPRICH/XML-SAX-ExpatXS-1.00 from CPAN.
gitpan-cpan-distribution: XML-SAX-ExpatXS
gitpan-cpan-version:      1.00
gitpan-cpan-path:         PCIMPRICH/XML-SAX-ExpatXS-1.00.tar.gz
gitpan-cpan-author:       PCIMPRICH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension XML::SAX::ExpatXS
 =====================================================
 
+1.00 July 16, 2004
+    - relevant memory leaks fixed
+    - some more XS code cleanup 
+
 0.99 June 7, 2004
     - element_decl (Name, Model) completed
     - attribute_decl (eName, aName, Type, Mode, Value) completed
