Import of PCIMPRICH/XML-SAX-ExpatXS-1.01 from CPAN.
gitpan-cpan-distribution: XML-SAX-ExpatXS
gitpan-cpan-version:      1.01
gitpan-cpan-path:         PCIMPRICH/XML-SAX-ExpatXS-1.01.tar.gz
gitpan-cpan-author:       PCIMPRICH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension XML::SAX::ExpatXS
 =====================================================
 
+1.01 September 24, 2004
+    - memory management check completed, 
+      no more leaks detected
+
 1.00 July 16, 2004
     - relevant memory leaks fixed
     - some more XS code cleanup 
