Import of PCIMPRICH/XML-SAX-ExpatXS-1.04 from CPAN.
gitpan-cpan-distribution: XML-SAX-ExpatXS
gitpan-cpan-version:      1.04
gitpan-cpan-path:         PCIMPRICH/XML-SAX-ExpatXS-1.04.tar.gz
gitpan-cpan-author:       PCIMPRICH
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,18 @@
 Revision history for Perl extension XML::SAX::ExpatXS
 =====================================================
 
+1.04 December 15, 2004
+    - fixed the bug of SystemId/PublicId of external DTD 
+      subset provided instead of identifiers of the current 
+      entity in Locator and Exception
+      [reported by Bjoern Hoehrmann]
+    - recognized string made available
+      as $p->{ParseOptions}->{RecognizedString}
+    - ParserOptions renamed to ParseOptions to match 
+      XML::SAX::Base
+    - minor fixes for make test
+    - test suite extended
+
 1.03 November 23, 2004
     - minor fixes for make test
 
