--- a/README
+++ b/README
@@ -2,28 +2,38 @@ README file for Perl extension XML::SAX::ExpatXS
 ================================================
 
 1. Introduction
-2. Callbacks
-3. Encoding
-4. Known Issues
+2. Dependencies
+3. Callbacks
+4. Encoding
 
 
 1.Introduction
 ------------------------------
 
-This module is an XS only implementation of PerlSAX2 parser 
-using Expat. XML::SAX::Expat is implemented as a layer 
-over XML::Parser.
+This module is a direct XS implementation of Perl SAX parser 
+using Expat. XML::SAX::Expat is implemented as a layer over 
+XML::Parser.
 
-This first version of this module has been created by Matt 
-Sergeant reusing sources of XML::Parser. The current 
-maintainer is Petr Cimprich <petr AT gingerall DOT cz>.
+The first version of this module has been created by Matt 
+Sergeant reusing sources of XML::Parser. The current maintainer 
+is Petr Cimprich <petr AT gingerall DOT cz>.
 
-The wrapper is considered stable, however it must be used 
-with caution and tested before a production deployment.
-Feedback of any kind would be appreciated.
+The wrapper is considered stable. Feedback of any kind is 
+appreciated.
 
 
-2. Callbacks
+2. Dependencies
+------------------------------
+
+This module requires Expat XML parser. XML::SAX::ExpatXS 1.10 
+or higher requires Expat 1.95.4 or higher (because 
+of XML_SetSkippedEntityHandler). For older Expat versions, it 
+is recommended to use XML::SAX::ExpatXS 1.09. 
+
+Required Perl modules are XML::Namespace Support and XML::SAX.
+
+
+3. Callbacks
 ------------------------------
 
 These PerlSAX callbacks are supported and tested:
@@ -52,7 +62,7 @@ These PerlSAX callbacks are supported and tested:
  start_entity()
  end_entity ()
  resolve_entity()
-
+ skipped_entity()
 
 These methods are never called by XML::SAX::ExpatXS:
 
@@ -66,7 +76,7 @@ This one is deprecated but if works with XML::SAX::ExpatXS:
  xml_decl()
 
 
-3. Encoding
+4. Encoding
 ------------------------------
 
 These charsets and encodings are supported:
@@ -95,9 +105,3 @@ Shift JIS.   (2,3)
 
 Other encodings can be added with XML::Encoding, see 
 lib/XML/SAX/ExpatXS/Encodings/README for more info.
-
-
-4. Known Issues
-------------------------------
-
- - This callback isn't called yet: skipped_entity()
